# Backend

./: .gitignore  docker-compose.yaml  docker-compose.yml
.github/workflows/: main.yml
finni/: Dockerfile  pyproject.toml
finni/apps/bank/: models.py  schemas.py  serializers.py  urls.py  views.py
finni/apps/bank/migrations/: 0001_initial.py
finni/apps/user/: models.py  schemas.py  serializers.py  urls.py  views.py
finni/apps/user/migrations/: 0001_initial.py
finni/core/: models.py
finni/django_project/: urls.py
finni/django_project/settings/: base.py  docker.py  local.py
